# oxidized

./: .gitattributes  .gitignore  .gitmessage  .markdownlint.jsonc  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  deny.toml  editor.toml  keymaps.toml  oxidized.toml  themes.toml
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  render-plantuml.yml
benches/: gutter_status_bench.rs  search_bench.rs  viewport_hscroll_bench.rs  visual_block_bench.rs  wrap_bench.rs
crates/core-actions/: Cargo.toml
crates/core-actions/src/: dispatcher.rs  io_ops.rs  key_translator.rs  lib.rs  span_resolver.rs  text_object.rs
crates/core-actions/src/dispatcher/: command.rs  command_parser.rs  edit.rs  mod.rs  mode.rs  motion.rs  undo.rs
crates/core-actions/tests/: dw_delete.rs  insert_newline_render.rs  ngi_adapter_parity.rs  ngi_command.rs  ngi_delete_left.rs  ngi_delete_under.rs  ngi_insert.rs  ngi_resolution.rs  ngi_shorthands.rs  ngi_translator.rs  ngi_visual.rs  ngi_visual_x.rs  operator_matrix.rs  operator_scenarios.rs  paste_numbered.rs  vim_regressions.rs  visual_char_mode.rs  visual_char_motions.rs  visual_char_operators.rs
crates/core-actions/tests/common/: mod.rs
crates/core-config/: Cargo.toml
crates/core-config/src/: lib.rs
crates/core-events/: Cargo.toml
crates/core-events/src/: lib.rs
crates/core-input/: Cargo.toml
crates/core-input/src/: async_service.rs  key_token.rs  lib.rs
crates/core-input/tests/: paste_fsm.rs  paste_streaming.rs
crates/core-keymap/: Cargo.toml
crates/core-keymap/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: layout.rs  lib.rs
crates/core-plugin/: Cargo.toml
crates/core-plugin/src/: lib.rs
crates/core-render/: Cargo.toml
crates/core-render/src/: apply.rs  batch_writer.rs  dirty.rs  lib.rs  overlay.rs  partial_cache.rs  partial_diff.rs  partial_metrics.rs  render_engine.rs  scheduler.rs  status.rs  style.rs  timing.rs  viewport.rs  writer.rs
crates/core-render/tests/: batching_metrics.rs  cursor_cluster_transitions.rs  cursor_only_status.rs  decision_dto_contract.rs  large_candidate_escalation.rs  overlay_metrics.rs  overlay_viewport_scroll.rs  partial_full_parity.rs  perf_parity.rs  render_timing.rs  scheduler_properties.rs  scroll_shift_cache_shift.rs  scroll_shift_cursor_trail.rs  scroll_shift_invariants.rs  semantic_delta_scenarios.rs  style_layer_cursor.rs  trimmed_diff.rs  undo_trim_parity.rs  unicode_clusters.rs  unicode_status_col.rs
crates/core-state/: Cargo.toml
crates/core-state/src/: lib.rs  undo.rs
crates/core-terminal/: Cargo.toml
crates/core-terminal/src/: capabilities.rs  lib.rs
crates/core-text/: Cargo.toml  build.rs  width_overrides.tsv
crates/core-text/src/: lib.rs  motion.rs  segment.rs  width.rs  width_probe.rs
crates/ox-bin/: Cargo.toml
crates/ox-bin/src/: main.rs
crates/ox-bin/tests/: status_only_delta.rs
design/: phase-0.md  phase-1-tasks.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  refactor-r1.md  refactor-r2.md  refactor-r3.md  unicode-cluster-refactor.md
docs/: ARCHITECTURE.md  ARCHITECTURE_QUICKSTART.md  COMPLETION.md  CONFIGURATION.md  CONTRIBUTING_ARCH.md  CONTRIBUTING_USER.md  DEPENDENCIES.md  DEVELOPMENT.md  FEATURE_STATUS.md  KEYMAPS.md  README.md  ROADMAP.md  THEMES.md  class-core.puml  commands.md  component-overview.puml  input.md  logging.md  sequence-runtime.puml
src/: main.rs
src/config/: editor.rs  theme.rs  watcher.rs
src/core/: buffer.rs  editor.rs  mode.rs  window.rs
src/features/: completion.rs  mod.rs  search.rs  syntax.rs  syntax_manager.rs
src/features/completion/: engine.rs  mod.rs  presenter.rs  providers.rs  schema.rs
src/input/: event_driven.rs  events.rs  keymap.rs
src/ui/: renderer.rs  terminal.rs
src/utils/: command.rs  file.rs  markdown.rs  mod.rs  plugin.rs
tests/: buffer_eol_tests.rs  buffer_mru_tests.rs  buffer_range_tests.rs  buffer_yank_put_tests.rs  command_tests.rs  completion_builder_tests.rs  completion_mdpreview_tests.rs  completion_popup_cache_tests.rs  completion_tests.rs  config_persistence_tests.rs  config_tests.rs  count_prefix_tests.rs  ex_command_tests.rs  ex_edit_creates_new_buffer_tests.rs  ex_force_write_tests.rs  ex_set_and_buffer_edge_tests.rs  ex_write_saveas_enew_tests.rs  file_operations_tests.rs  g8_command_tests.rs  g_caret_motion_tests.rs  g_motion_tests.rs  gi_command_tests.rs  grapheme_cursor_tests.rs  horizontal_scroll_eol_tests.rs  indentation_settings_tests.rs  keymap_tests.rs  keymaps_drift_guard.rs  leader_key_tests.rs  macro_key_tests.rs  markdown_blockquote_wrapping_tests.rs  markdown_preview_ex_command_tests.rs  markdown_preview_incremental_tests.rs  markdown_preview_line_map_tests.rs  markdown_preview_scrollsync_edge_tests.rs  markdown_preview_scrollsync_tests.rs  markdown_preview_tests.rs  markdown_render_tests.rs  markdown_syntax_tests.rs  markdown_table_tests.rs  marks_tests.rs  (+24 more)
