[package]
name = "oxidized"
version = "0.0.1"
edition = "2024"

[dependencies]
# Terminal handling
crossterm = "0.29.0"
# JSON-RPC for LSP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Configuration parsing
toml = "0.9.5"
# Regex support
regex = "1.0"
# File watching
notify = "8.2.0"
# Tree-sitter for syntax highlighting
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"
# Logging
log = "0.4"
# Logging infrastructure: tracing with EnvFilter and file appender
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "std",
] }
tracing-appender = "0.2"
# Error handling
thiserror = "2.0.14"
anyhow = "1.0.99"
unicode-segmentation = "1.11"
unicode-width = "0.2"
crossbeam-channel = "0.5"

[dev-dependencies]
# Async runtime for tests only
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
# Temporary directory creation for tests
tempfile = "3.0"
# Benchmarking
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "wrap_bench"
harness = false

[[bench]]
name = "viewport_hscroll_bench"
harness = false

[[bench]]
name = "gutter_status_bench"
harness = false
