[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.99" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
unicode-normalization = "0.1.24"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.224", features = ["derive"] }

[workspace.package]
edition = "2024"
description = "A friendly, modern re-imagining of Vim/Neovim in pure Rust"
license = "MIT OR Apache-2.0"
rust-version = "1.89"
version = "0.1.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
