[package]
name = "core-actions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
core-events = { path = "../core-events" }
core-state = { path = "../core-state" }
core-text = { path = "../core-text" }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.99"
tempfile = "3.22.0"
