[package]
name = "core-actions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true
core-events = { path = "../core-events" }
core-state = { path = "../core-state" }
core-text = { path = "../core-text" }
core-model = { path = "../core-model" }

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.22.0"
