[package]
name = "core-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
dirs = "6.0.0"
toml = "0.9.7"

[dev-dependencies]
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
