[package]
name = "core-input"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = "0.1.17"
core-events = { path = "../core-events" }

[dev-dependencies]
tracing-subscriber.workspace = true
