[package]
name = "core-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
bitflags = "2.9.4"
crossterm = "0.29.0"
core-state = { path = "../core-state" }
core-terminal = { path = "../core-terminal" }
core-text = { path = "../core-text" }
