[package]
name = "oxidized"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
crossterm = { version = "0.29.0" }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
core-events = { path = "../core-events" }
core-terminal = { path = "../core-terminal" }
core-render = { path = "../core-render" }
core-text = { path = "../core-text" }
core-state = { path = "../core-state" }
core-input = { path = "../core-input" }
core-config = { path = "../core-config" }
core-actions = { path = "../core-actions" }
core-model = { path = "../core-model" }
